# router-os-benchmark

./: .gitignore  README.md  case_generator.py  clean.py  constants.py  create-guest.sh  experiment_generator.py  experiments_file.py  launch-mininet.sh  main.py  nodes.py  plot.py  projects.py  pyproject.toml  requirements.txt  sources.list  telnet.py  templates.py
experiments/: simple-topology-BSDRP.json  simple-topology-VyOS-RTL8139.json  simple-topology-VyOS.json  simple-topology-all-oses.json
experiments/BSDRP/HR/E1000/: simple-topology-BSDRP-HR-E1000-BGP.json  simple-topology-BSDRP-HR-E1000-MPLS.json  simple-topology-BSDRP-HR-E1000-OSPF.json  simple-topology-BSDRP-HR-E1000-RIP.json
experiments/BSDRP/HR/RTL8139/: simple-topology-BSDRP-HR-RTL8139-BGP.json  simple-topology-BSDRP-HR-RTL8139-MPLS.json  simple-topology-BSDRP-HR-RTL8139-OSPF.json  simple-topology-BSDRP-HR-RTL8139-RIP.json
experiments/BSDRP/HR/VirtIO/: simple-topology-BSDRP-HR-VirtIO-BGP.json  simple-topology-BSDRP-HR-VirtIO-MPLS.json  (+2 more)
shared/: logger.py  main.py  plot.py  pyproject.toml  qemu_host.py  router_tester.py  tests.py
shared/resources/: test_list.json
src/: clean.py  config.py  constants.py  experiments_file.py  images.py  links.py  logger.py  nodes.py  plot.py  projects.py  run.py  telnet.py  templates.py  types.py  utils.py
src/rules/: BGP.py  OSPF.py  guest.py  network_stack.py  router.py  routing_stack.py  static.py  utils.py
src/rules/routing/: OSPF.py  RIP.py  static.py
src_case_generator/: config.py  network_protocols.py  nics.py  operating_systems.py  resources.py  tests.py
(+168 files in other folders)
