[project]
name = "router-os-benchmark-gns3"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "gns3fy>=0.8.0",
    "jsonschema>=4.23.0",
    "loguru>=0.7.3",
    "pexpect>=4.9.0",
]

[tool.uv.sources]
gns3fy = { path = "../../../../../../Programmation/python/gns3fy" }
